--- a/bia_proj/templates/layout.html
+++ b/bia_proj/templates/layout.html
@@ -15,6 +15,11 @@
 
             <a href="{% url 'home' %}">Home</a>
             <a href="{% url 'calculator' %}">Go to Calculator</a>
+            {% if request.user.is_authenticated %}
+                <a href="{% url 'logout' %}">logout</a>
+            {% else %}
+                <a href="{% url 'login' %}">login</a>
+            {% endif %}
         </nav>
 
         <main>
