--- a/bia_proj/templates/layout.html
+++ b/bia_proj/templates/layout.html
@@ -16,9 +16,11 @@
             <a href="{% url 'home' %}">Home</a>
             <a href="{% url 'calculator' %}">Go to Calculator</a>
             {% if request.user.is_authenticated %}
-                <a href="{% url 'logout' %}">logout</a>
+            <a href="{% url 'dashboard' %}">Dashboard</a>
+            <a href="{% url 'logout' %}">Logout</a>
             {% else %}
-                <a href="{% url 'login' %}">login</a>
+                <a href="{% url 'login' %}">Login</a>
+                <a href="{% url 'register' %}">Register</a>
             {% endif %}
         </nav>
 
