--- a/bia_proj/user_auth/templates/login.html
+++ b/bia_proj/user_auth/templates/login.html
@@ -2,12 +2,22 @@
 
 {% block title %}Login{% endblock %}
 
+{% load static %}
+
+{% block files %}
+<link rel="stylesheet" href="{% static 'form.css' %}">
+{% endblock %}
+
 {% block body %}
 <form action="{% url 'login' %}" method="POST">
     {% csrf_token %}
-    
-    {{ login_form }}
 
-    <button type="submit">Login</button>
+    <label for="username">Username:</label>
+    <input type="text" name="username" id="username">
+    
+    <label for="password">Password:</label>
+    <input type="password" name="password" id="password">
+
+    <button type="submit" class="rounded-button">Login</button>
 </form>
 {% endblock %}
