--- a/bia_proj/templates/layout.html
+++ b/bia_proj/templates/layout.html
@@ -10,19 +10,23 @@
     </head>
 
     <body>
-        <nav>
-            Brew It Again
-
-            <a href="{% url 'home' %}">Home</a>
-            <a href="{% url 'calculator' %}">Go to Calculator</a>
-            {% if request.user.is_authenticated %}
-            <a href="{% url 'dashboard' %}">Dashboard</a>
-            <a href="{% url 'logout' %}">Logout</a>
-            {% else %}
-                <a href="{% url 'login' %}">Login</a>
-                <a href="{% url 'register' %}">Register</a>
-            {% endif %}
-        </nav>
+        <header>
+            <nav>
+                <a href="{% url 'home' %}" id="home">Brew It Again</a>
+                
+                <a href="{% url 'calculator' %}" class="rounded-button">Go to Calculator</a>
+                
+                {% if request.user.is_authenticated %}
+                <a href="{% url 'dashboard' %}" class="rounded-button">Dashboard</a>
+                
+                <a href="{% url 'logout' %}" class="rounded-button">Logout</a>
+                {% else %}
+                <a href="{% url 'login' %}" class="rounded-button">Login</a>
+                
+                <a href="{% url 'register' %}" class="rounded-button">Register</a>
+                {% endif %}
+            </nav>
+        </header>
 
         <main>
             {% block body %}{% endblock %}
