--- a/bia_proj/templates/layout.html
+++ b/bia_proj/templates/layout.html
@@ -14,7 +14,7 @@
             <nav>
                 <a href="{% url 'home' %}" id="home">Brew It Again</a>
                 
-                <a href="{% url 'calculator' %}" class="rounded-button">Go to Calculator</a>
+                <a href="{% url 'calculator' %}" class="rounded-button">Calculator</a>
                 
                 {% if request.user.is_authenticated %}
                 <a href="{% url 'dashboard' %}" class="rounded-button">Dashboard</a>
