Add wrong username or password message

--- a/bia_proj/user_auth/templates/login.html
+++ b/bia_proj/user_auth/templates/login.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block body %}
+
+{% if bad_login %}
+<p>Wrong username or password</p>
+{% endif %}
+
 <form action="{% url 'login' %}" method="POST">
     {% csrf_token %}
 
