--- a/bia_proj/coffee_ratio_calculator/templates/calculator.html
+++ b/bia_proj/coffee_ratio_calculator/templates/calculator.html
@@ -25,10 +25,10 @@
         </div>
     </fieldset>
 
-    <label for="input-ratio">Enter the ratio you will be using:</label>
-    <input type="text" name="input-ratio" id="input-ratio" class="ratio-input">
+    <label for="input-ratio">Enter the ratio of coffee to water you will be using:</label>
+    <input type="text" name="input-ratio" id="input-ratio" class="ratio-input" placeholder="e.g. 1/18">
 
-    <label for="input-amount">Enter the amount of <span id="w-or-c-label">water</span> you will be using:</label>
+    <label for="input-amount">Enter the amount of <span id="w-or-c-label">water</span> you will be using (unit of measurement doesn't matter):</label>
     <input type="text" name="input-amount" id="input-amount" class="float-input">
 
     <button id="calculate" type="submit" class="rounded-button">Calculate</button>
