--- a/bia_proj/static/form.css
+++ b/bia_proj/static/form.css
@@ -1,24 +1,49 @@
 form {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
   gap: 1em;
-}
-
-form>label {
-  grid-column: 1;
   width: fit-content;
 }
 
-form>input[type="text"] {
-  grid-column: 2;
+form>label {
+  width: 25em;
+  height: fit-content;
 }
 
 form>button[type="submit"] {
-  grid-column: 1 / 3;
   margin: 0 auto;
-  align-self: center;
 }
 
-form>fieldset {
-  grid-column: 1 / 3;
+form>input[type="text"] {
+  height: fit-content;
+  width: 100%;
+}
+
+
+@media (min-width: 3000px) {
+  form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1em;
+    width: fit-content;
+  }
+
+  form>label {
+    grid-column: 1;
+    width: 25em;
+    height: fit-content;
+  }
+
+  form>input[type="text"] {
+    grid-column: 2;
+  }
+
+  form>button[type="submit"] {
+    grid-column: 1 / 3;
+    margin: 0 auto;
+    align-self: center;
+  }
+
+  form>fieldset {
+    grid-column: 1 / 3;
+  }
 }
