--- a/bia_proj/coffee_ratio_calculator/static/calculator.css
+++ b/bia_proj/coffee_ratio_calculator/static/calculator.css
@@ -20,12 +20,13 @@ fieldset>legend {
 fieldset>div {
     width: fit-content;
     margin: 0 auto;
+    margin-top: 1em;
     float: none;
 }
 
 @media (min-width: 800px) {
     fieldset>legend {
-        width: 50%;
+        width: 48%;
         float: left;
     }
 
