--- a/bia_proj/static/form.css
+++ b/bia_proj/static/form.css
@@ -24,6 +24,8 @@ form>input[type="text"] {
 @media (min-width: 1000px) {
   form {
     grid-template-columns: repeat(2, 1fr);
+    justify-items: normal;
+    width: 60%;
   }
 
   form>label {
@@ -43,5 +45,11 @@ form>input[type="text"] {
 
   form>fieldset {
     grid-column: 1 / 3;
+  }
+}
+
+@media (min-width: 1250px) {
+  form {
+    width: 50em;
   }
 }
