--- a/bia_proj/templates/layout.html
+++ b/bia_proj/templates/layout.html
@@ -14,17 +14,19 @@
             <nav>
                 <a href="{% url 'home' %}" id="home">Brew It Again</a>
                 
-                <a href="{% url 'calculator' %}" class="rounded-button">Calculator</a>
+                <div>
+                    <a href="{% url 'calculator' %}" class="rounded-button">Calculator</a>
                 
-                {% if request.user.is_authenticated %}
-                <a href="{% url 'dashboard' %}" class="rounded-button">Dashboard</a>
+                    {% if request.user.is_authenticated %}
+                    <a href="{% url 'dashboard' %}" class="rounded-button">Dashboard</a>
                 
-                <a href="{% url 'logout' %}" class="rounded-button">Logout</a>
-                {% else %}
-                <a href="{% url 'login' %}" class="rounded-button">Login</a>
+                    <a href="{% url 'logout' %}" class="rounded-button">Logout</a>
+                    {% else %}
+                    <a href="{% url 'login' %}" class="rounded-button">Login</a>
                 
-                <a href="{% url 'register' %}" class="rounded-button">Register</a>
-                {% endif %}
+                    <a href="{% url 'register' %}" class="rounded-button">Register</a>
+                    {% endif %}
+                </div>
             </nav>
         </header>
 
