--- a/bia_proj/user_auth/templates/login.html
+++ b/bia_proj/user_auth/templates/login.html
@@ -25,4 +25,6 @@
 
     <button type="submit" class="rounded-button">Login</button>
 </form>
+
+<p class="centered-text">Not registered yet? <a href="{% url 'register' %}">Click here.</a></p>
 {% endblock %}
