Remove flex display from body and create a flex container div to prevent unforseen interactions with browser plugins

--- a/bia_proj/static/base.css
+++ b/bia_proj/static/base.css
@@ -9,6 +9,9 @@ html {
 body {
     min-height: 100%;
     margin: 0;
+}
+
+.flex-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -45,6 +48,10 @@ nav {
 .rounded-button:hover {
     background-color: rgb(210, 23, 23);
     cursor: pointer;
+}
+
+.centered-text {
+    text-align: center;
 }
 
 button {
