Add height declaration

--- a/bia_proj/static/base.css
+++ b/bia_proj/static/base.css
@@ -12,6 +12,7 @@ body {
 }
 
 .flex-container {
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
