Make the password field also dynamic

--- a/bia_proj/static/form.css
+++ b/bia_proj/static/form.css
@@ -15,7 +15,7 @@ form>button[type="submit"] {
   margin: 0 auto;
 }
 
-form>input[type="text"] {
+form>input[type="text"], form>input[type="password"] {
   height: fit-content;
   width: 80%;
 }
