Add the reset styling for bigger screens

--- a/bia_proj/static/form.css
+++ b/bia_proj/static/form.css
@@ -32,7 +32,7 @@ form>input[type="text"], form>input[type="password"] {
     grid-column: 1;
   }
 
-  form>input[type="text"] {
+  form>input[type="text"], form>input[type="password"] {
     grid-column: 2;
     width: auto;
   }
