--- a/bia_proj/static/form.css
+++ b/bia_proj/static/form.css
@@ -38,6 +38,7 @@ form>input[type="text"], form>input[type="password"] {
   }
 
   form>button[type="submit"] {
+    grid-columns: 1 / 3;
     margin: 0 auto;
     align-self: center;
   }
