--- a/bia_proj/bia/templates/new_recipe.html
+++ b/bia_proj/bia/templates/new_recipe.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Create a Recipe{% endblock %}
 
 {% load static %}
 
